Font and Color Changes
-Changed the Header image
-Changed the Header font
-Change the font for the body text
-Added the icons for the list headers
-Adjust colors of the icons to match websites.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <title>Jason Thomas Portfolio</title>
 
@@ -15,19 +16,29 @@
 </header>
 
 <section class="introduction-section">
-    <h1>Introduction</h1>
+    <div class="introduction-head">
+        <i class="fa fa-info fa-lg"></i>
+        <h1>Introduction</h1>
+    </div>
     <p>I'm a 44 years old and it's time for a career change.</p>
     <p>I like being creative and I am always trying to learn something new every day as well as help my good friends.</p>
+    <p>About a year and a half ago, I decided to get back into web programming. I used to do a lot of it back in the late 90s, but the bottom feel out of the market and I moved to the San Fransico area to find new work.</p>
+
 </section>
 
 <section class="location-section">
-    <i class="fa fa-location-arrow"></i>
-    <h1>Where I'm From</h1> 
+    <div class="location-head">
+        <i class="fa fa-location-arrow fa-lg"></i>
+        <h1>Where I'm From</h1> 
+    </div>
     <p>Planet Earth, San Jose, CA</p>  
 </section>
 
 <section class="questions-section">
-    <h1>More About Me</h1>
+    <div class="questions-header">
+        <i class="fa fa-question fa-lg"></i>    
+        <h1>More About Me</h1>
+    </div>
     <h2>What are your favorite hobbies?</h2>
     <p>Drawing, reading, hiking, and camping</p>
     <h2>What's your dream job?</h2>
@@ -37,7 +48,10 @@
 </section>
 
 <section class="projects">
-    <h1>Projects</h1>
+    <div class="projects-head">
+        <i class="fa fa-tasks fa-lg"></i>
+        <h1>Projects</h1>
+    </div>
     <h2>Hacking the times</h2>
     <a href="http://i.imgur.com/E4ku8hp.jpg"><p>Changing the New Yorks Times site using Chrome Deleveoper tools</p></a>
     <h2>Karma Website</h2>
@@ -49,9 +63,9 @@
 <footer class="content-footer">
     <p>Say hi to me on these social networks:</p>
     <ul class="social">
-        <li><a href="https://github.com/nanoman689">GitHub</a></li>
-        <li><a href="https://twitter.com/nanoman689">Twitter</a></li>
-        <li><a href="https://plus.google.com/u/0/+JasonThomas689">Google+</a></li>
+        <li><i class="fa fa-github fa-lg"></i><a href="https://github.com/nanoman689">GitHub</a></li>
+        <li><i class="fa fa-twitter fa-lg"></i><a href="https://twitter.com/nanoman689">Twitter</a></li>
+        <li><i class="fa fa-google-plus fa-lg"></i><a href="https://plus.google.com/u/0/+JasonThomas689">Google+</a></li>
     </ul>
     <p>This pattern is downloaded from www.subtlepatterns.com</p>
 </footer>
